@@ -1,5 +1,6 @@
 package com.lrrent.backend.service;
 
+import com.lrrent.backend.dto.AutoResponse;
 import com.lrrent.backend.entity.Auto;
 import com.lrrent.backend.repository.AutoRepository;
 import org.springframework.stereotype.Service;
@@ -7,6 +8,7 @@ import com.lrrent.backend.repository.PrenotazioneRepository;
 import java.time.LocalDate;
 import java.util.stream.Collectors;
 import java.util.List;
+import com.lrrent.backend.dto.AutoRequest;
 
 @Service
 public class AutoService {
@@ -20,55 +22,71 @@ public class AutoService {
         this.prenotazioneRepository = prenotazioneRepository;
     }
 
-    public List<Auto> getAll() {
-        return autoRepository.findAll();
+    public List<AutoResponse> getAll() {
+        return autoRepository.findAll()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
     }
 
-    public Auto save(Auto auto) {
-        return autoRepository.save(auto);
+    public AutoResponse save(AutoRequest request) {
+        Auto auto = mapToEntity(request);
+        Auto saved = autoRepository.save(auto);
+        return mapToResponse(saved);
     }
 
-    public Auto getById(Long id) {
-        return autoRepository.findById(id)
+    public AutoResponse getById(Long id) {
+        Auto auto = autoRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Auto non trovata"));
+
+        return mapToResponse(auto);
     }
 
     public void delete(Long id) {
         autoRepository.deleteById(id);
     }
 
-    public Auto update(Long id, Auto updatedAuto) {
-        Auto auto = getById(id);
-
-        auto.setMarca(updatedAuto.getMarca());
-        auto.setModello(updatedAuto.getModello());
-        auto.setAnno(updatedAuto.getAnno());
-        auto.setCarburante(updatedAuto.getCarburante());
-        auto.setCambio(updatedAuto.getCambio());
-        auto.setPrezzoGiornaliero(updatedAuto.getPrezzoGiornaliero());
-        auto.setDisponibile(updatedAuto.getDisponibile());
-
-        return autoRepository.save(auto);
+    public Auto getEntityById(Long id) {
+        return autoRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Auto non trovata"));
     }
 
-    public List<Auto> filter(Boolean disponibile, String carburante, Double prezzoMax) {
+
+    public AutoResponse update(Long id, AutoRequest request) {
+        Auto auto = getEntityById(id);
+
+        auto.setMarca(request.getMarca());
+        auto.setModello(request.getModello());
+        auto.setAnno(request.getAnno());
+        auto.setCarburante(request.getCarburante());
+        auto.setCambio(request.getCambio());
+        auto.setPrezzoGiornaliero(request.getPrezzoGiornaliero());
+        auto.setDisponibile(request.getDisponibile());
+
+        Auto saved = autoRepository.save(auto);
+        return mapToResponse(saved);
+    }
+
+    public List<AutoResponse> filter(Boolean disponibile, String carburante, Double prezzoMax) {
+
+        List<Auto> result;
 
         if (disponibile != null) {
-            return autoRepository.findByDisponibile(disponibile);
+            result = autoRepository.findByDisponibile(disponibile);
+        } else if (carburante != null) {
+            result = autoRepository.findByCarburante(carburante);
+        } else if (prezzoMax != null) {
+            result = autoRepository.findByPrezzoGiornalieroLessThanEqual(prezzoMax);
+        } else {
+            result = autoRepository.findAll();
         }
 
-        if (carburante != null) {
-            return autoRepository.findByCarburante(carburante);
-        }
-
-        if (prezzoMax != null) {
-            return autoRepository.findByPrezzoGiornalieroLessThanEqual(prezzoMax);
-        }
-
-        return autoRepository.findAll();
+        return result.stream()
+                .map(this::mapToResponse)
+                .toList();
     }
 
-    public List<Auto> findDisponibili(LocalDate dataInizio, LocalDate dataFine) {
+    public List<AutoResponse> findDisponibili(LocalDate dataInizio, LocalDate dataFine) {
 
         return autoRepository.findAll().stream()
                 .filter(auto -> {
@@ -80,7 +98,32 @@ public class AutoService {
                             );
                     return !occupata;
                 })
-                .collect(Collectors.toList());
+                .map(this::mapToResponse)
+                .toList();
     }
 
+    private AutoResponse mapToResponse(Auto auto) {
+        return AutoResponse.builder()
+                .id(auto.getId())
+                .marca(auto.getMarca())
+                .modello(auto.getModello())
+                 .anno(auto.getAnno())
+                .carburante(auto.getCarburante())
+                .cambio(auto.getCambio())
+                .prezzoGiornaliero(auto.getPrezzoGiornaliero())
+                .disponibile(auto.getDisponibile())
+                .build();
+    }
+
+    private Auto mapToEntity(AutoRequest request) {
+        return Auto.builder()
+                .marca(request.getMarca())
+                .modello(request.getModello())
+                .anno(request.getAnno())
+                .carburante(request.getCarburante())
+                .cambio(request.getCambio())
+                .prezzoGiornaliero(request.getPrezzoGiornaliero())
+                .disponibile(request.getDisponibile())
+                .build();
+    }
 }
